--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,20 @@
-opencv-python>=3.4
+cloudpickle==0.6.1
+cycler==0.10.0
+dask==0.19.4
+decorator==4.3.0
+dlib==19.16.0
+imutils==0.5.1
+kiwisolver==1.0.1
+matplotlib==3.0.0
+networkx==2.2
+numpy==1.15.2
+opencv-contrib-python==3.4.3.18
+opencv-python==3.4.3.18
+Pillow==5.3.0
+pyparsing==2.2.2
+python-dateutil==2.7.3
+PyWavelets==1.0.1
+scikit-image==0.14.1
+scipy==1.1.0
+six==1.11.0
+toolz==0.9.0
